Fixed linting issues

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,10 @@
         "es2021": true
     },
     "extends": [
-        "eslint:recommended"
+        "standard"
     ],
     "parser": "@typescript-eslint/parser",
+    "ignorePatterns": ["src/test/**/*"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
